some changes for deploying

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "hwasurr-blog",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Hwasurr's devlog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kang hwa soo <iamsupermazinga@gmail.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "scripts": {
-    "predeploy": "gatsby build",
-    "deploy": "gh-pages -d public",
+    "deploy": "gh-pages -d public -b master",
+    "prebuild": "rimraf public",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
@@ -44,6 +44,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "rimraf": "^3.0.2",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
