--- a/.github/workflows/deploy-aws-ecs.yml
+++ b/.github/workflows/deploy-aws-ecs.yml
@@ -24,10 +24,9 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@2.14
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_REPOSITORY: hwasurr-dot-io
           IMAGE_TAG: ${{ github.sha }}
         with:
-          name: $DOCKER_USER/$DOCKER_REPOSITORY
+          name: ${{DOCKER_USER}}/hwasurr-dot-io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,$IMAGE_TAG"
