update test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v1
         
       - name: console log
-        run: echo test
+        run: echo content is changing!
