--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-transformer-sharp": "^2.4.6",
     "gh-pages": "^2.2.0",
     "prismjs": "^1.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
