--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-plugin-typescript": "^2.3.4",
     "gatsby-plugin-typography": "^2.4.3",
     "gatsby-remark-copy-linked-files": "^2.2.3",
