--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf public",
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -16,58 +17,58 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.20.25",
-    "gatsby-image": "^2.3.4",
-    "gatsby-plugin-feed": "^2.4.3",
-    "gatsby-plugin-google-analytics": "^2.2.4",
-    "gatsby-plugin-manifest": "^2.3.5",
-    "gatsby-plugin-offline": "^3.1.4",
-    "gatsby-plugin-react-helmet": "^3.2.4",
-    "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-typescript": "^2.3.4",
-    "gatsby-plugin-typography": "^2.4.3",
-    "gatsby-remark-copy-linked-files": "^2.2.3",
-    "gatsby-remark-images": "^3.2.4",
-    "gatsby-remark-prismjs": "^3.4.3",
-    "gatsby-remark-responsive-iframe": "^2.3.3",
-    "gatsby-remark-smartypants": "^2.2.3",
-    "gatsby-source-filesystem": "^2.2.4",
-    "gatsby-transformer-remark": "^2.7.3",
-    "gatsby-transformer-sharp": "^2.4.6",
-    "gh-pages": "^2.2.0",
-    "prismjs": "^1.19.0",
+    "gatsby": "^4.0.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-feed": "^4.0.0",
+    "gatsby-plugin-google-analytics": "^4.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.1",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-typescript": "^4.0.0",
+    "gatsby-plugin-typography": "^4.0.0",
+    "gatsby-remark-copy-linked-files": "^5.0.0",
+    "gatsby-remark-images": "^6.0.0",
+    "gatsby-remark-prismjs": "^6.0.0",
+    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-remark-smartypants": "^5.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
+    "gh-pages": "^3.2.3",
+    "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.20",
     "rimraf": "^3.0.2",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13",
+    "typography": "^0.16.21",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "@types/node": "^13.13.2",
+    "@types/node": "^16.11.6",
     "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-helmet": "^5.0.15",
-    "@types/typography": "^0.16.3",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "prettier": "2.0.4",
-    "typescript": "^3.8.3"
+    "@types/react-dom": "^17.0.10",
+    "@types/react-helmet": "^6.1.4",
+    "@types/typography": "^0.16.4",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "2.4.1",
+    "typescript": "^4.4.4"
   },
   "homepage": "https://github.com/hwasurr/hwasurr.io",
   "keywords": [
