--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "version": "0.1.0",
   "author": "Kang hwa soo <iamsupermazinga@gmail.com>",
   "scripts": {
-    "deploy": "gh-pages -d public -b master",
     "prebuild": "rimraf public",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "lint:fix": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^4.0.2",
+    "gatsby": "^4.9.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.0.0",
     "gatsby-plugin-google-analytics": "^4.0.0",
@@ -36,7 +36,6 @@
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
-    "gh-pages": "^3.2.3",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -51,22 +50,22 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
     "@types/react-helmet": "^6.1.4",
     "@types/typography": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.4.1",
     "typescript": "^4.4.4"
   },
