--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "prebuild": "rimraf public",
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "dev": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "develop": "cross-env NODE_OPTIONS=--no-experimental-fetch gatsby develop",
+    "dev": "yarn develop",
+    "format": "prettier --write \"**/*.{js,jsx,json}\"",
     "lint:fix": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -17,45 +17,47 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^4.9.1",
+    "gatsby": "^5.9.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-feed": "^4.0.0",
-    "gatsby-plugin-google-analytics": "^4.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.1",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-typescript": "^4.0.0",
-    "gatsby-plugin-typography": "^4.0.0",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-remark-prismjs": "^6.0.0",
-    "gatsby-remark-responsive-iframe": "^5.0.0",
-    "gatsby-remark-smartypants": "^5.0.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "prismjs": "^1.25.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-plugin-feed": "^5.9.0",
+    "gatsby-plugin-google-analytics": "^5.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-typescript": "^5.9.0",
+    "gatsby-plugin-typography": "^5.9.0",
+    "gatsby-remark-copy-linked-files": "^6.9.0",
+    "gatsby-remark-images": "^7.9.0",
+    "gatsby-remark-prismjs": "^7.9.0",
+    "gatsby-remark-responsive-iframe": "^6.9.0",
+    "gatsby-remark-smartypants": "^6.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.20",
     "rimraf": "^3.0.2",
+    "sharp": "^0.32.0",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13",
     "typography": "^0.16.21",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.18.0",
     "@types/node": "^16.11.6",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-helmet": "^6.1.4",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
     "@types/typography": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -63,7 +65,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.4.1",
@@ -74,7 +76,6 @@
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hwasurr/hwasurr.io.git"
