--- a/.eslintrc
+++ b/.eslintrc
@@ -1,133 +1,118 @@
 {
-    "globals": {
-        "__PATH_PREFIX__": true,
+  "globals": {
+    "__PATH_PREFIX__": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react", "prettier", "jest", "react-hooks"],
+  "extends": [
+    "airbnb",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
+  "settings": {
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".js", ".jsx", ".ts", ".tsx"]
     },
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "react",
-        "prettier",
-        "jest",
-        "react-hooks"
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
+  "rules": {
+    "react/no-array-index-key": "warn",
+    "arrow-parens": "error",
+    "react/display-name": 0,
+    "react/jsx-props-no-spreading": "warn",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".tsx", ".jsx"]
+      }
     ],
-    "extends": [
-        "airbnb",
+    "no-trailing-spaces": [
+      "error",
+      {
+        "ignoreComments": true
+      }
+    ],
+    "class-methods-use-this": [
+      "error",
+      {
+        "exceptMethods": ["authorizationParams"]
+      }
+    ],
+    "@typescript-eslint/no-var-requires": "warn", // please use import
+    "no-case-declarations": "warn", // please use import
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "no-underscore-dangle": "off",
+    "comma-dangle": "off",
+    "linebreak-style": "off",
+    "react/require-default-props": 1,
+    "react/prop-types": "off",
+    "no-unused-vars": "warn",
+    "react/prefer-stateless-function": 1
+  },
+  "env": {
+    "browser": true,
+    "jest": true,
+    "es6": true
+  },
+  "ignorePatterns": ["node_modules/", "dist/"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "processor": "@graphql-eslint/graphql",
+      "parser": "@typescript-eslint/parser",
+      "extends": [
         "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true,
-            "modules": true,
-            "experimentalObjectRestSpread": true
-        }
+      ],
+      "env": {
+        "es6": true,
+      },
     },
-    "settings": {
-        "import/extensions": [
-            ".js",
-            ".jsx",
-            ".ts",
-            ".tsx"
+    {
+      "files": ["*.graphql"],
+      "parser": "@graphql-eslint/eslint-plugin",
+      "plugins": ["@graphql-eslint"],
+      "rules": {
+        "@graphql-eslint/no-anonymous-operations": "error",
+        "@graphql-eslint/naming-convention": [
+          "error",
+          {
+            "OperationDefinition": {
+              "style": "PascalCase",
+              "forbiddenPrefixes": ["Query", "Mutation", "Subscription", "Get"],
+              "forbiddenSuffixes": ["Query", "Mutation", "Subscription"],
+            },
+          },
         ],
-        "import/parsers": {
-            "@typescript-eslint/parser": [
-                ".js",
-                ".jsx",
-                ".ts",
-                ".tsx"
-            ]
-        },
-        "import/resolver": {
-            "node": {
-                "extensions": [
-                    ".js",
-                    ".jsx",
-                    ".ts",
-                    ".tsx"
-                ]
-            }
-        }
+      },
     },
-    "rules": {
-        "react/no-array-index-key": "warn",
-        "arrow-parens": "error",
-        "react/display-name": 0,
-        "react/jsx-props-no-spreading": "warn",
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".tsx",
-                    ".jsx"
-                ]
-            }
-        ],
-        "no-trailing-spaces": [
-            "error",
-            {
-                "ignoreComments": true
-            }
-        ],
-        "class-methods-use-this": [
-            "error",
-            {
-                "exceptMethods": [
-                    "authorizationParams"
-                ]
-            }
-        ],
-        "@typescript-eslint/no-var-requires": "warn", // please use import
-        "no-case-declarations": "warn", // please use import
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
-        "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-        "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
-        "no-underscore-dangle": "off",
-        "comma-dangle": "off",
-        "linebreak-style": "off",
-        "react/require-default-props": 1,
-        "no-unused-vars": "warn",
-        "button-has-type": 0,
-        "react/prefer-stateless-function": 1,
-        "react/forbid-prop-types": [
-            0,
-            {
-                "forbid": [
-                    "object"
-                ]
-            }
-        ],
-        "react/prop-types": [
-            1,
-            {
-                "ignore": [
-                    "className",
-                    "children",
-                    "location",
-                    "params",
-                    "location*"
-                ]
-            }
-        ]
-    },
-    "env": {
-        "browser": true,
-        "jest": true,
-        "es6": true
-    },
-    "ignorePatterns": [
-        "node_modules/",
-        "dist/"
-    ]
+  ],
+
 }
